tests/expected_invalid_generic_call_missing_args.diag.out
<input>:9:5: error: generic function 'identity' requires explicit type arguments
        support::identity(7)
        ^^^^^^^^^^^^^^^^^^^^
<input>:13:5: error: generic function 'list_empty' requires explicit type arguments
        list_empty()
        ^^^^^^^^^^^^
<input>:17:5: error: generic function 'map_empty' requires explicit type arguments
        map_empty()
        ^^^^^^^^^^^
